# yt-chapter-extractor

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/: textual-thread-worker-in-screen.md
docs/: ffmpeg-loudnorm-ebu-r128.md
src/yt_chapter_extractor/: __main__.py  app.py  audio.py  models.py  theme.py  youtube.py
src/yt_chapter_extractor/screens/: chapter_select.py  dir_input.py  download.py  metadata_edit.py  mode_select.py  norm_file_list.py  norm_progress.py  norm_settings.py  playlist_select.py  url_input.py
